<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_label">TITLE</string>
    <string name="dream_title">Enter a title for the dream</string>
    <string name="dream_realized">Realized</string>
    <string name="dream_deferred">Deferred</string>
    <string name="dream_details_label">DETAILS</string>
    <string name="dream_entry_0_button"></string>
    <string name="dream_entry_1_button"></string>
    <string name="dream_entry_2_button"></string>
    <string name="dream_entry_3_button"></string>
    <string name="dream_entry_4_button"></string>
    <string name="new_dream">New Dream</string>
    <string name="new_photo">Take Dream Photo</string>
    <string name="share_dream">Share Dream</string>
    <string name="dream_report_realized">The </string>
    <string name="send_report">Send Report</string>
    <string name="all_dreams">All Dreams</string>
    <string name="active_dreams">Active Dreams</string>
    <string name="realized_dreams">Realized Dreams</string>
    <string name="deferred_dreams">Deferred Dreams</string>
    <string name="delete_all_dreams">Delete All Dreams</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
