<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_dreams"
            android:icon="@drawable/ic_menu_label_solid"
            android:title="@string/all_dreams"/>
        <item
            android:id="@+id/nav_active_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/active_dreams"/>
        <item
            android:id="@+id/nav_realized_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/realized_dreams"/>
        <item
            android:id="@+id/nav_deferred_dreams"
            android:icon="@drawable/ic_menu_label_outline"
            android:title="@string/deferred_dreams"/>

    </group>



</menu>